apps/planetlia-platform/backend-core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-core-service
spec:
  selector:
    app: backend-core
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
